--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+@layer components {
+    .infoText{
+        @apply p-4 bg-gray-700 rounded-lg max-w-[300px]
+    }
+
+}
